--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,16 @@
 *{
-    background-color: rgb(26, 25, 25);
     color: #fff;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+body{
+    background-color: #1a1919;
 }
 .logo{
     height: 80px;
     border-radius:40px ;
-    box-shadow:-1px -5px 10px 5px rgb(145, 8, 8);
+    /* box-shadow:-1px -5px 10px 5px rgb(145, 8, 8); */
     border:none;
+    width: 15%;
 }
 .shareBtn{
     width: 6em;
@@ -25,13 +28,20 @@
     height: 2em;
     font-size: 30px;
     border: none;
-    background-color: tomato;
+    background-color: #000000;
     color: #fff;
     border-radius: 10px;
    
 }
 
+.pokeBtn:hover{
+    background-color: #fff;
+    color:#000000;
+    cursor: pointer;
+}
+
 .header ul{
+    background-color: rgb(26, 25, 25);
     display: flex;
     align-items: center;
     margin: 20px;
@@ -53,7 +63,7 @@
     list-style: none;
     font-size: 15px;
     color: #fff;
-    position: absolute;
+    position: relative;
     bottom: 0;
     text-align: center;
     justify-items: center;
@@ -69,6 +79,22 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.card-content{
+   
+
+
+}
 .card{
+    background-color: #39393a;
+    width: 25%;
+    margin: 10px;
+    padding:10px;
+    border-radius: 10px;
+}
+img{
+    width: 60%;
+    height: 40%;
+    border-radius:10px;
+    background-color: blue;
     
 }
