--- a/src/styles.css
+++ b/src/styles.css
@@ -24,13 +24,15 @@ body{
 }
 .pokeBtn{
 
-    width: 6em;
+    width: 5em;
     height: 2em;
-    font-size: 30px;
+    padding: 2px;
+    font-size: 20px;
     border: none;
     background-color: #000000;
     color: #fff;
     border-radius: 10px;
+    margin-left: 25%;
    
 }
 
@@ -69,6 +71,28 @@ body{
     justify-items: center;
 
 }
+.main-content{
+    
+}
+.Cards{
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap:20px;
+}
+
+.card-text-content{
+    padding: 10px;
+}
+.card{          
+   
+    background-color: #39393a;
+    width: 250px;
+    height: 100%;
+    padding:5px;
+    border-radius: 10px;
+   
+} 
 
 .main-texts{
     text-align: center;
@@ -79,22 +103,35 @@ body{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.card-content{
-   
-
-
-}
-.card{
-    background-color: #39393a;
-    width: 25%;
-    margin: 10px;
-    padding:10px;
-    border-radius: 10px;
-}
-img{
-    width: 60%;
-    height: 40%;
-    border-radius:10px;
-    background-color: blue;
+.card-container{
+    display: flex;
+    flex-direction:row;
     
+   
+}
+
+img{
+    width: 100%;
+    height: 10em;
+    border-radius:10px  10px 0px 0px;
+    /* background-color: rgb(91, 91, 93); */
+    
+}
+.timeOfDay{
+    text-align: center;
+}
+.quantity,.seller{
+    opacity: 0.5;
+}
+
+
+@media screen and (max-width: 768px) {
+    .card-container {
+        grid-template-columns: repeat(2, 1fr); /* Adjust for 2 cards per row on small devices */
+    }
+
+    .shareBtn,
+    .pokeBtn {
+        margin-left: 0; /* Remove margin on small devices */
+    }
 }
