--- a/src/styles.css
+++ b/src/styles.css
@@ -123,8 +123,7 @@ body {
 img {
   width: 100%;
   height: 15em;
-  border-radius: 10px 10px 10px 10px;
-  image-rendering: crisp-edges;
+  border-radius: 10px;
   box-shadow: -5px 5px 20px 3px black;
 }
 
