--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,21 @@ img {
 .seller {
   opacity: 0.5;
 }
+.item-status{
+  padding: 5px;
+  color: red;
+  opacity: 1;
+  font-size: lsmaller;
+  font-weight: 900;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* position:relative; */
+/* top:50%; */
+  left:50%;
+  background-color: #000000;
+  border-radius: 5px;
+  
+
+}
 
 @media screen and (max-width: 768px) {
   .card-container {
